Change BCrypt bean initialization and DI in JwtTokenProwider, fix app.prop

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.show-sql=true
 #--------------------------------------------
 # JWT token
-jwt.token.secret=${jwt.token.secret}
+jwt.token.secret=${JWT_TOKEN_SECRET}
 jwt.token.expired=3600000
 #--------------------------------------------
 # Max file size
@@ -20,14 +20,10 @@ secretKey=${AWS_secretKey}
 bucketName=fullpx
 #--------------------------------------------
 #mailing
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=${mail.username}
-spring.mail.password=${mail.password}
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.host=${MAILGUN_SMTP_SERVER}
+spring.mail.port=${MAILGUN_SMTP_PORT}
+spring.mail.username=${MAILGUN_SMTP_LOGIN}
+spring.mail.password=${MAILGUN_SMTP_PASSWORD}
 # TLS , port 587
 spring.mail.properties.mail.smtp.starttls.enable=true
 #--------------------------------------------
