--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "jquery": "^2.2.4",
     "materialize-css": "^1.0.0",
     "ngx-materialize": "^6.1.3",
+    "flex-gallery": "git+https://github.com/yarikwest/flex-gallery.git",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
